# confpilot

./: .env.example  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PRD-产品需求文档.md  figma-design.md
docs/software-copyright/: 主要功能模块说明.md  源代码目录说明.md  用户操作手册.md  系统设计说明书.md  软件说明书.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  table.tsx  textarea.tsx
