[package]
name = "configpilot"
version = "0.1.0"
description = "ConfigPilot personal zsh and Ghostty configuration sync"
authors = ["ConfigPilot"]
edition = "2021"

[lib]
name = "configpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
git2 = { version = "0.19.0", default-features = false, features = ["https"] }
keyring = "3.6.1"
notify = "7.0.0"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tauri = { version = "2.2.0", features = ["tray-icon"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["time"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
